# ETL-Pipeline

./: .env.example  .gitignore  LICENSE  README.md  config.yaml  makefile  prefect.yaml  pyproject.toml  requirements.txt  run.py  run_pipeline.py  set_prefect.py  worker.py
.github/workflows/: python-ci.yml
src/: __init__.py  notifier.py  pipeline.py  storage.py  utils.py
tests/: test_pipeline_basic.py
tests/data/: raw_production_sample.csv
