[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "etl-production-pipeline"
version = "0.1.0"
description = "ETL pipeline for oil & gas production data (Prefect)"
authors = [
    { name="Alejandro Perez", email="you@example.com" }
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "pandas",
    "prefect",
    "sqlalchemy",
    "psycopg2-binary",
    "numpy",
    "python-dotenv"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "black",
    "flake8"
]

[tool.black]
line-length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.setuptools.packages.find]
where = ["src"]